localizacion en español
esta es la localizacion en español ya depurada, solo quedan los textos del juego, las reglas para participar en la traduccion es:
-no traducir las palabras en mayusculas a menos que sean vistas en el juego
-solo traducir la parte "valor" de los archivos
-no eliminar ni las comillas dobles ni las aperturas de los signos de interrogacion
-no incluir tildes ni la letra ñ ni las aperturas de signos ni tampoco comillas dobles, solo simples. (á,é,í,ó,ú,ñ,¿,!,",...)

la estructura del archivo es la siguiente
[nombre del archivo.df]
¿key¿="¿valor¿"

--- a/textos.ini
+++ b/textos.ini
@@ -4333,7 +4333,7 @@
 ¿+ Gain 1 point in mechanical¿="¿+ Gana un punto de Mecanica¿"
 ¿+ Gain 2 points in mechanical!¿="¿+ Gana 2 puntos de mecanica!¿"
 ¿ more times. ¿="¿ veces mas. ¿"
-¿Train shooting ¿="¿Entrena la Tiro ¿"
+¿Train shooting ¿="¿Entrena Tiro ¿"
 ¿¿="¿¿"
 ¿Train mechanical ¿="¿Entrena la Mecanica ¿"
 ¿Train fitness ¿="¿Entrena la Aptitud ¿"
@@ -4396,7 +4396,7 @@
 ¿Paranoid¿="¿Paranoico¿"
 ¿		+ May identify traits in new recruits¿="¿		+ Podria identificar los rasgos de los nuevos reclutas¿"
 ¿		- Can be a real grumpus¿="¿		- Puede ser un verdadero cascarrabia¿"
-¿A great outlook on life combined with not being very perceptive allows for some magical feats of denial!¿="¿Una gran vision de la vida combinada con una pobre brindan unos poderes de negacion magicos!¿"
+¿A great outlook on life combined with not being very perceptive allows for some magical feats of denial!¿="¿Una gran vision de la vida combinada con una pobre percepcion brindan unos poderes de negacion magicos!¿"
 ¿		- Bad rolls for perception and wits¿="¿		- Malas probabilidades para Percepcion e Ingnio¿"
 ¿From perception of others, a good attitude, and pure charisma, there's something about this person that opens doors!¿="¿Desde la perspectiva de otros, una buena actitud, y puro carisma, hay algo de esta persona que abre puertas!¿"
 ¿		- Can't charm way out of everything¿="¿		- El carisma no es la salida para todo¿"
@@ -4430,62 +4430,62 @@
 ¿Retains old values before world went crazy. This is good and bad.¿="¿Conserva los valores de antes de que el mundo se volviera loco. Esto es bueno y malo.¿"
 ¿		+ 3 points to medical and mechanical skills!!¿="¿		+ 3 puntos a habilidades Medica y Mecanica!!¿"
 [gamemodes.df]
-¿		Unlock by beating all of the hard difficulties. Familiar Characters Extreme, Rare Characters Extreme, and Marathon Mode.¿="¿		Unlock by beating all of the hard difficulties. Familiar Characters Extreme, Rare Characters Extreme, and Marathon Mode.¿"
-¿		Double the zombies, double the fun.¿="¿		Double the zombies, double the fun.¿"
-¿MODE¿="¿MODE¿"
-¿		Unlock by beating both Deadlier Road Mode and Long Winding Road Mode.¿="¿		Unlock by beating both Deadlier Road Mode and Long Winding Road Mode.¿"
-¿		It takes 30 driving days to get to Canada, rather than the usual 15 days. About a month of pain!¿="¿		It takes 30 driving days to get to Canada, rather than the usual 15 days. About a month of pain!¿"
-¿ Mode¿="¿ Mode¿"
-¿		Unlock by beating both Deadlier Road Mode and Rare Characters Mode.¿="¿		Unlock by beating both Deadlier Road Mode and Rare Characters Mode.¿"
-¿Most recruits you meet are special characters!¿="¿Most recruits you meet are special characters!¿"
-¿Rare ¿="¿Rare ¿"
-¿Very difficult challenge with custom characters!¿="¿Very difficult challenge with custom characters!¿"
-¿		Make sure your custom characters are strong and work together well, because they will be facing 160% the usual amount of zombies.¿="¿		Make sure your custom characters are strong and work together well, because they will be facing 160% the usual amount of zombies.¿"
-¿EXTREME¿="¿EXTREME¿"
-¿		Bandits are more cruel.¿="¿		Bandits are more cruel.¿"
-¿30% more danger! 30% more excitement!¿="¿30% more danger! 30% more excitement!¿"
-¿		Difficulty progression starts the same, but gets higher! At least you get more time to prepare.¿="¿		Difficulty progression starts the same, but gets higher! At least you get more time to prepare.¿"
-¿For people that like to chill and take it easy.¿="¿For people that like to chill and take it easy.¿"
-¿		Unlock by beating any of the normal difficulties. Death Road Normal Mode, Familiar Characters Mode, or Rare Characters Mode.¿="¿		Unlock by beating any of the normal difficulties. Death Road Normal Mode, Familiar Characters Mode, or Rare Characters Mode.¿"
-¿		Be careful, this means less days to prepare for the end!¿="¿		Be careful, this means less days to prepare for the end!¿"
-¿For impatient people that want a risky shortcut!¿="¿For impatient people that want a risky shortcut!¿"
-¿		But not always.¿="¿		But not always.¿"
-¿Most road recruits you meet are now special characters with unique abilities!¿="¿Most road recruits you meet are now special characters with unique abilities!¿"
-¿		These are characters that you've created and saved. Make your friends and family, and they'll show up in the game!¿="¿		These are characters that you've created and saved. Make your friends and family, and they'll show up in the game!¿"
-¿Familiar Characters Mode¿="¿Familiar Characters Mode¿"
-¿		Get your skis, pack a toque... we're going to CANADA!¿="¿		Get your skis, pack a toque... we're going to CANADA!¿"
-¿Death Road Normal Mode¿="¿Death Road Normal Mode¿"
+¿		Unlock by beating all of the hard difficulties. Familiar Characters Extreme, Rare Characters Extreme, and Marathon Mode.¿="¿		Desbloquea superando todos los modos dificiles. Personajes Conocidos Extremo, Personajes espciales Extremo, y Modo Maraton.¿"
+¿		Double the zombies, double the fun.¿="¿		El doble de zombis, El doble de diversion.¿"
+¿MODE¿="¿MODO¿"
+¿		Unlock by beating both Deadlier Road Mode and Long Winding Road Mode.¿="¿		Desbloquea superando Modo Camino Mortal y Modo Largo Viaje Tortuoso.¿"
+¿		It takes 30 driving days to get to Canada, rather than the usual 15 days. About a month of pain!¿="¿		Toma 30 dias de manejo hasta Canada, en vez de los 15 dias usuales. Cerca de un mes de dolor!¿"
+¿ Mode¿="¿ Modo¿"
+¿		Unlock by beating both Deadlier Road Mode and Rare Characters Mode.¿="¿		Desbloquea superando Modo Camino Mortal y Modo de Personajes Raros.¿"
+¿Most recruits you meet are special characters!¿="¿La mayoria de tus reclutas seran personajes especiales!¿"
+¿Rare ¿="¿Raros ¿"
+¿Very difficult challenge with custom characters!¿="¿Un gran reto con personajes guardados!¿"
+¿		Make sure your custom characters are strong and work together well, because they will be facing 160% the usual amount of zombies.¿="¿		Asegurese que sus personajes sean fuertes y trabajen bien juntos, porque estaran enfrentando un 160% mas de zombis de lo usual.¿"
+¿EXTREME¿="¿EXTREMO¿"
+¿		Bandits are more cruel.¿="¿		Los Bandidos son mas crueles.¿"
+¿30% more danger! 30% more excitement!¿="¿30% mas peligroso! 30% mas excitante!¿"
+¿		Difficulty progression starts the same, but gets higher! At least you get more time to prepare.¿="¿		La progresion de dificultad comienza igual, pero se intensifica! Almenos tienes mas tiempo para prepararte.¿"
+¿For people that like to chill and take it easy.¿="¿Para la gente que le gusta relajarse y tomarse las cosas con calma.¿"
+¿		Unlock by beating any of the normal difficulties. Death Road Normal Mode, Familiar Characters Mode, or Rare Characters Mode.¿="¿		Desbloquea ganando alguno de los modos normales. Death Road Modo Normal, Modo de Personajes Conocidos, o Modo de Personajes Raros.¿"
+¿		Be careful, this means less days to prepare for the end!¿="¿		Se cuidadoso, esto significa menos dias para prepararse para el final!¿"
+¿For impatient people that want a risky shortcut!¿="¿Para gente impaciente que quiere un atajo riesgoso!¿"
+¿		But not always.¿="¿		Pero no siempre.¿"
+¿Most road recruits you meet are now special characters with unique abilities!¿="¿La mayoria de los personajes que conoces ahora sera especiales con habilidades unicas!¿"
+¿		These are characters that you've created and saved. Make your friends and family, and they'll show up in the game!¿="¿		Estos son personajes que has creado y guardado. Haz a tus amigos y familiares, y ellos apareceran en el juego!¿"
+¿Familiar Characters Mode¿="¿Modo de Personajes Conocidos¿"
+¿		Get your skis, pack a toque... we're going to CANADA!¿="¿		Toma tus skis, empaca un gorro... nos vamos a CANADA!¿"
+¿Death Road Normal Mode¿="¿Death Road Modo Normal¿"
 ¿ WINS: ¿="¿ WINS: ¿"
 ¿Kepa¿="¿Kepa¿"
 ¿UNLOCK: ¿="¿UNLOCK: ¿"
 ¿¿="¿¿"
-¿The normal, default game mode.¿="¿The normal, default game mode.¿"
-¿		Most road recruits you find will be random, but sometimes you'll be more lucky.¿="¿		Most road recruits you find will be random, but sometimes you'll be more lucky.¿"
-¿Most road recruits you meet are now familiar characters, instead of random!¿="¿Most road recruits you meet are now familiar characters, instead of random!¿"
-¿Rare Characters Mode¿="¿Rare Characters Mode¿"
-¿		This usually can make things a little easier.¿="¿		This usually can make things a little easier.¿"
-¿Short Trip to Heck Mode¿="¿Short Trip to Heck Mode¿"
-¿		It takes 9 driving days to get to Canada, rather than the default 15 days.¿="¿		It takes 9 driving days to get to Canada, rather than the default 15 days.¿"
-¿A quick 9 driving day mode.¿="¿A quick 9 driving day mode.¿"
-¿Long Winding Road Mode¿="¿Long Winding Road Mode¿"
-¿		It takes 25 driving days to get to Canada, rather than the usual 15 days.¿="¿		It takes 25 driving days to get to Canada, rather than the usual 15 days.¿"
-¿A longer 25 driving day mode.¿="¿A longer 25 driving day mode.¿"
-¿Deadlier Road Mode¿="¿Deadlier Road Mode¿"
-¿		About 30% more zombies.¿="¿		About 30% more zombies.¿"
-¿A tougher challenge! Gateway to harder modes!¿="¿A tougher challenge! Gateway to harder modes!¿"
+¿The normal, default game mode.¿="¿Normal, modo estandar de juego.¿"
+¿		Most road recruits you find will be random, but sometimes you'll be more lucky.¿="¿		La mayoria de los personajes que encuetres seran aleatorios, pero aveces tendras mas suerte.¿"
+¿Most road recruits you meet are now familiar characters, instead of random!¿="La mayoria de los personajes que encuentres ahora seran familiares, en lugar de aleatorios!¿"
+¿Rare Characters Mode¿="¿Modo de Personajes Raros¿"
+¿		This usually can make things a little easier.¿="¿		Esto normalmente hace las cosas mas facil.¿"
+¿Short Trip to Heck Mode¿="¿Modo Viaje Corto al Infierno¿"
+¿		It takes 9 driving days to get to Canada, rather than the default 15 days.¿="¿		Son 9 dias de viaje en lugar de los 15 estandar.¿"
+¿A quick 9 driving day mode.¿="¿Un rapido modo de 9 dias de viaje.¿"
+¿Long Winding Road Mode¿="¿Modo Largo Viaje Tortuoso¿"
+¿		It takes 25 driving days to get to Canada, rather than the usual 15 days.¿="¿		son 25 dias de viaje en lugar de los 15 estandar.¿"
+¿A longer 25 driving day mode.¿="¿Un largo modo de 25 dias de viaje.¿"
+¿Deadlier Road Mode¿="¿Modo Camino Mortal¿"
+¿		About 30% more zombies.¿="¿		Alrededor de 30% mas zombis.¿"
+¿A tougher challenge! Gateway to harder modes!¿="¿Un reto mayor! Comienzo de los modos dificiles!¿"
 ¿Familiar ¿="¿Familiar ¿"
-¿Most recruits you meet are familiar characters!¿="¿Most recruits you meet are familiar characters!¿"
-¿		Unlock by beating both Deadlier Road Mode and Familiar Characters Mode.¿="¿		Unlock by beating both Deadlier Road Mode and Familiar Characters Mode.¿"
-¿		This is combined with the amount of zombies set to 160%. Can the unique characters you find survive gigantic walls of undead?¿="¿		This is combined with the amount of zombies set to 160%. Can the unique characters you find survive gigantic walls of undead?¿"
-¿Very difficult challenge with special characters!¿="¿Very difficult challenge with special characters!¿"
-¿Marathon¿="¿Marathon¿"
-¿A grueling challenge.¿="¿A grueling challenge.¿"
-¿		Zombie amount starts off 50% higher than normal, and eventually goes to double. ¿="¿		Zombie amount starts off 50% higher than normal, and eventually goes to double. ¿"
-¿Extremely difficult challenge, with 30 driving days!¿="¿Extremely difficult challenge, with 30 driving days!¿"
+¿Most recruits you meet are familiar characters!¿="¿La mayoria de tus reclutas seran personajes conocidos!¿"
+¿		Unlock by beating both Deadlier Road Mode and Familiar Characters Mode.¿="¿		Desbloquea superando Modo Camino Mortal y Modo de Personajes Conocidos..¿"
+¿		This is combined with the amount of zombies set to 160%. Can the unique characters you find survive gigantic walls of undead?¿="¿		Esto se combina con un aumento de 160% de zombis. Pueden los personajes unicos que encuentres sobrevivir a las gigantescas oleadas de no muertos?¿"
+¿Very difficult challenge with special characters!¿="¿Un gran reto con personajes especiales!¿"
+¿Marathon¿="¿Maraton¿"
+¿A grueling challenge.¿="¿Un reto agotador.¿"
+¿		Zombie amount starts off 50% higher than normal, and eventually goes to double. ¿="¿		La cantidad de zombis comienza un 50% mas alto de lo normal, y eventualmente llega al doble. ¿"
+¿Extremely difficult challenge, with 30 driving days!¿="¿Reto extremadamente dificil, con 30 dias de manejo!¿"
 ¿K*E*P*A ¿="¿K*E*P*A ¿"
-¿Kepa Expert Player Advanced Mode.¿="¿Kepa Expert Player Advanced Mode.¿"
-¿		Start with a Kepa. Do NOT let Kepa die. The ultimate challenge.¿="¿		Start with a Kepa. Do NOT let Kepa die. The ultimate challenge.¿"
-¿Abandon all hope ye who enter here.¿="¿Abandon all hope ye who enter here.¿"
+¿Kepa Expert Player Advanced Mode.¿="¿Modo Jugador Experto Avanzado Kepa.¿"
+¿		Start with a Kepa. Do NOT let Kepa die. The ultimate challenge.¿="¿		Comienza con un Kepa. No dejes morir al Kepa. El reto maximo.¿"
+¿Abandon all hope ye who enter here.¿="¿Abandonad toda esperanza aquellos que oseis entrar.¿"
 [game-start.df]
 ¿!¿="¿!¿"
 ¿NO MORE PEOPLE!¿="¿NO MORE PEOPLE!¿"
