localizacion en español

--- a/textos.ini
+++ b/textos.ini
@@ -488,11 +488,6 @@
 ¿APOCALYPSE COFFEE¿="¿APOCALYPSE COFFEE¿"
 ¿FURNITURARIUM¿="¿FURNITURARIUM¿"
 [tutorial.df]
-¿tutorend¿="¿tutorend¿"
-¿tutorstorage¿="¿tutorstorage¿"
-¿kitchen¿="¿kitchen¿"
-¿bedroom¿="¿bedroom¿"
-¿tutor3¿="¿tutor3¿"
 ¿	YOU CAN SWAP LEADERS¿="¿	YOU CAN SWAP LEADERS¿"
 ¿ALWAYS BE LOOTING¿="¿ALWAYS BE LOOTING¿"
 ¿CHOOSE YOUR PALS WISELY¿="¿CHOOSE YOUR PALS WISELY¿"
@@ -566,11 +561,6 @@
 ¿ TO TALK OR INTERACT¿="¿ TO TALK OR INTERACT¿"
 ¿BATHROOMS MAY HAVE MEDS¿="¿BATHROOMS MAY HAVE MEDS¿"
 ¿ FOR TEAM SWAP OR INFO¿="¿ FOR TEAM SWAP OR INFO¿"
-¿tutor2¿="¿tutor2¿"
-¿tutorbath¿="¿tutorbath¿"
-¿tutor4¿="¿tutor4¿"
-¿tutor5¿="¿tutor5¿"
-¿tutor6¿="¿tutor6¿"
 [cabin.df]
 ¿ searches the bear¿="¿ searches the bear¿"
 ¿A huge stuffed bear looms in the cabin.¿="¿A huge stuffed bear looms in the cabin.¿"
@@ -4444,7 +4434,7 @@
 ¿EXTREME¿="¿EXTREMO¿"
 ¿		Bandits are more cruel.¿="¿		Los Bandidos son mas crueles.¿"
 ¿30% more danger! 30% more excitement!¿="¿30% mas peligroso! 30% mas excitante!¿"
-¿		Difficulty progression starts the same, but gets higher! At least you get more time to prepare.¿="¿		La progresion de dificultad comienza igual, pero se intensifica! Almenos tienes mas tiempo para prepararte.¿"
+¿		Difficulty progression starts the same, but gets higher! At least you get more time to prepare.¿="¿		La progresion de dificultad comienza igual, pero se intensifica! Al menos tienes mas tiempo para prepararte.¿"
 ¿For people that like to chill and take it easy.¿="¿Para la gente que le gusta relajarse y tomarse las cosas con calma.¿"
 ¿		Unlock by beating any of the normal difficulties. Death Road Normal Mode, Familiar Characters Mode, or Rare Characters Mode.¿="¿		Desbloquea ganando alguno de los modos normales. Death Road Modo Normal, Modo de Personajes Conocidos, o Modo de Personajes Raros.¿"
 ¿		Be careful, this means less days to prepare for the end!¿="¿		Se cuidadoso, esto significa menos dias para prepararse para el final!¿"
@@ -4493,7 +4483,7 @@
 ¿GAME START NEW!!!!!!¿="¿GAME START NEW!!!!!!¿"
 [game-select.df]
 ¿OH, DANG¿="¿OH, DANG¿"
-¿New Game¿="¿New Game¿"
+¿New Game¿="¿Nuevo juego¿"
 ¿Choose game option:¿="¿Choose game option:¿"
 ¿Choose game slot:¿="¿Choose game slot:¿"
 ¿YES¿="¿YES¿"
@@ -5046,37 +5036,37 @@
 ¿Checking for misplaced save files...¿="¿Checking for misplaced save files...¿"
 [car-logic.df]
 ¿	¿="¿	¿"
-¿Car Keys¿="¿Car Keys¿"
-¿ hotwires the car!¿="¿ hotwires the car!¿"
-¿		But where are the keys?¿="¿		But where are the keys?¿"
-¿Locked Car¿="¿Locked Car¿"
-¿Get in the car¿="¿Get in the car¿"
+¿Car Keys¿="¿Llaves del Auto¿"
+¿ hotwires the car!¿="¿ Puentear el auto!¿"
+¿		But where are the keys?¿="¿		Pero donde estan las llaves?¿"
+¿Locked Car¿="¿Auto cerrado¿"
+¿Get in the car¿="¿Entrar al auto¿"
 ¿		¿="¿		¿"
-¿Let's Roll!¿="¿Let's Roll!¿"
-¿It doesn't take long for ¿="¿It doesn't take long for ¿"
-¿Nevermind.¿="¿Nevermind.¿"
-¿Get in.¿="¿Get in.¿"
-¿OUTSIDE OF A CAR¿="¿OUTSIDE OF A CAR¿"
-¿CAR HITPOINTS: ¿="¿CAR HITPOINTS: ¿"
-¿GET OUT¿="¿GET OUT¿"
-¿GIVE 'ER!¿="¿GIVE 'ER!¿"
-¿START THE CAR¿="¿START THE CAR¿"
-¿LET'S BOOGIE¿="¿LET'S BOOGIE¿"
-¿FLOOR IT!¿="¿FLOOR IT!¿"
-¿HONK¿="¿HONK¿"
-¿CAR START!¿="¿CAR START!¿"
+¿Let's Roll!¿="¿Rodemos!¿"
+¿It doesn't take long for ¿="¿No le tomara mucho tiempo a ¿"
+¿Nevermind.¿="¿No importa.¿"
+¿Get in.¿="¿Entrar.¿"
+¿OUTSIDE OF A CAR¿="¿FUERA DEL AUTO¿"
+¿CAR HITPOINTS: ¿="¿PUNTOS DE DAÑO DEL AUTO: ¿"
+¿GET OUT¿="¿SALIR¿"
+¿GIVE 'ER!¿="¿DALE!¿"
+¿START THE CAR¿="¿ARRANCAR EL AUTO¿"
+¿LET'S BOOGIE¿="¿COWABUNGA¿"
+¿FLOOR IT!¿="¿A FONDO!¿"
+¿HONK¿="¿BOCINA¿"
+¿CAR START!¿="¿AUTO ENCENDIDO!¿"
 ¿RAUUUGH!!!¿="¿RAUUUGH!!!¿"
-¿It's a car. WHAT NOW?¿="¿It's a car. WHAT NOW?¿"
-¿Pick up the car.¿="¿Pick up the car.¿"
-¿Hotwired!¿="¿Hotwired!¿"
-¿ to break into the car and get it running. No keys necessary!¿="¿ to break into the car and get it running. No keys necessary!¿"
-¿The keys fit perfectly!¿="¿The keys fit perfectly!¿"
-¿ unlocks the car door.¿="¿ unlocks the car door.¿"
-¿Leave it be for now¿="¿Leave it be for now¿"
-¿This car looks like it's in really good condition. ¿="¿This car looks like it's in really good condition. ¿"
-¿Pick up the car¿="¿Pick up the car¿"
-¿This is a set of keys, including some car keys.¿="¿This is a set of keys, including some car keys.¿"
-¿ picks it up.¿="¿ picks it up.¿"
+¿It's a car. WHAT NOW?¿="¿Es un auto. AHORA QUE?¿"
+¿Pick up the car.¿="¿Llevarse el auto.¿"
+¿Hotwired!¿="¿Puenteado!¿"
+¿ to break into the car and get it running. No keys necessary!¿="¿ para entrar en el auto y encenderlo. Las llaves no son necesarias!¿"
+¿The keys fit perfectly!¿="¿La llave entra perfectamente!¿"
+¿ unlocks the car door.¿="¿ abre el auto.¿"
+¿Leave it be for now¿="¿Dejarlo por ahora¿"
+¿This car looks like it's in really good condition. ¿="¿Este auto parece estar en buenas condiciones. ¿"
+¿Pick up the car¿="¿Llevarse el auto¿"
+¿This is a set of keys, including some car keys.¿="¿Este es un juego de llaves, incluye las llaves de un auto.¿"
+¿ picks it up.¿="¿ las toma.¿"
 [charblurb.df]
 ¿text¿="¿text¿"
 ¿DOWN¿="¿DOWN¿"
@@ -5382,114 +5372,114 @@
 ¿Embarking on the Death Road¿="¿Embarking on the Death Road¿"
 ¿ decides to grab some supplies from a nearby location.¿="¿ decides to grab some supplies from a nearby location.¿"
 [mission-events-human.df]
-¿later gator¿="¿later gator¿"
-¿ TACTIC : ¿="¿ TACTIC : ¿"
-¿DEFEND¿="¿DEFEND¿"
-¿RUNNIN!¿="¿RUNNIN!¿"
-¿SHOOTIN!¿="¿SHOOTIN!¿"
-¿ DIED!!!!¿="¿ DIED!!!!¿"
-¿KAKAROOOOT!!¿="¿KAKAROOOOT!!¿"
-¿I hope that's just ketchup¿="¿I hope that's just ketchup¿"
-¿For cripes sake...¿="¿For cripes sake...¿"
+¿later gator¿="¿nos vemos al rato¿"
+¿ TACTIC : ¿="¿ TACTICA : ¿"
+¿DEFEND¿="¿DEFENDER¿"
+¿RUNNIN!¿="¿CORRER!¿"
+¿SHOOTIN!¿="¿DISPARAR!¿"
+¿ DIED!!!!¿="¿ MUERTO!!!!¿"
+¿KAKAROOOOT!!¿="¿KAKAROTOOO!!¿"
+¿I hope that's just ketchup¿="¿Espero que solo sea salsa de tomate¿"
+¿For cripes sake...¿="¿Por el amor a Cris...¿"
 ¿ugh!¿="¿ugh!¿"
 ¿gurk¿="¿gurk¿"
-¿No way!¿="¿No way!¿"
-¿This is it for me!¿="¿This is it for me!¿"
-¿I'm in for it now!¿="¿I'm in for it now!¿"
+¿No way!¿="¿De ninguna forma!¿"
+¿This is it for me!¿="¿Esto es para mi!¿"
+¿I'm in for it now!¿="¿Estoy por ahi ahora!¿"
 ¿shrieeeeeeek¿="¿shrieeeeeeek¿"
-¿Slow zombies aren't supposed to be dangerous!¿="¿Slow zombies aren't supposed to be dangerous!¿"
-¿Excuse me... stop eating me please¿="¿Excuse me... stop eating me please¿"
-¿What-ever!¿="¿What-ever!¿"
-¿Heh, this is nothing! I've had worse!¿="¿Heh, this is nothing! I've had worse!¿"
-¿I'm fine. I'll walk it off!¿="¿I'm fine. I'll walk it off!¿"
-¿This was a bad idea!¿="¿This was a bad idea!¿"
-¿No problem! I got this!¿="¿No problem! I got this!¿"
-¿Bring it on!!!¿="¿Bring it on!!!¿"
-¿That stings!¿="¿That stings!¿"
-¿That was close! Oh wait, ow!¿="¿That was close! Oh wait, ow!¿"
-¿Bury me with a sweet headstone!¿="¿Bury me with a sweet headstone!¿"
-¿Bury me... with my food cans!¿="¿Bury me... with my food cans!¿"
+¿Slow zombies aren't supposed to be dangerous!¿="¿Los zombis lentos no se suponen que sean peligrosos!¿"
+¿Excuse me... stop eating me please¿="¿Perdoname... deja de comerme por favor¿"
+¿What-ever!¿="¿Como Sea!¿"
+¿Heh, this is nothing! I've had worse!¿="¿Heh, esto no es nada! He tenido peores!¿"
+¿I'm fine. I'll walk it off!¿="¿Estoy bien. Voy a superarlo!¿"
+¿This was a bad idea!¿="¿Esto fue una mala idea!¿"
+¿No problem! I got this!¿="¿Sin problema! Lo tengo!¿"
+¿Bring it on!!!¿="¿Acabenlos!!!¿"
+¿That stings!¿="¿Eso apesta!¿"
+¿That was close! Oh wait, ow!¿="¿Eso estuvo cerca! Oh espera, ow!¿"
+¿Bury me with a sweet headstone!¿="¿Entierrenme con una bella lapida!¿"
+¿Bury me... with my food cans!¿="¿Entierrenme... con mi comida enlatada!¿"
 ¿Ow ow ow ow ow¿="¿Ow ow ow ow ow¿"
-¿heeelp meeeee¿="¿heeelp meeeee¿"
-¿Uhhh... little help?¿="¿Uhhh... little help?¿"
-¿Save me, Rosdower!¿="¿Save me, Rosdower!¿"
-¿Tell everyone my last words were cool!¿="¿Tell everyone my last words were cool!¿"
-¿Uh... I meant to do that!¿="¿Uh... I meant to do that!¿"
-¿Wait! I get a do-over!¿="¿Wait! I get a do-over!¿"
-¿Time out! Time out!¿="¿Time out! Time out!¿"
+¿heeelp meeeee¿="¿Ayudenmeeeee¿"
+¿Uhhh... little help?¿="¿Uhhh... una ayudita?¿"
+¿Save me, Rosdower!¿="¿Salvame, Rosdower!¿"
+¿Tell everyone my last words were cool!¿="¿Diles a los demas que mis ultimas palabras fueron cool!¿"
+¿Uh... I meant to do that!¿="¿Uh... Digo para hacer eso!¿"
+¿Wait! I get a do-over!¿="¿Espera! Consegui rehacerlo!¿"
+¿Time out! Time out!¿="¿Tiemp fuera! Tiempo fuera!¿"
 ¿Ouch!¿="¿Ouch!¿"
 ¿No!¿="¿No!¿"
-¿Whatever!¿="¿Whatever!¿"
-¿Fine! This is fine!¿="¿Fine! This is fine!¿"
+¿Whatever!¿="¿Como sea!¿"
+¿Fine! This is fine!¿="¿Perfecto! Esto es perfecto!¿"
 ¿consarnit¿="¿consarnit¿"
-¿Please don't throw my skeleton around¿="¿Please don't throw my skeleton around¿"
-¿Hey... cut it out¿="¿Hey... cut it out¿"
+¿Please don't throw my skeleton around¿="¿Por favor no lances mi esqueleto alredor¿"
+¿Hey... cut it out¿="¿Hey... cortalo¿"
 ¿Oh uh... woops!¿="¿Oh uh... woops!¿"
-¿Well... could be worse¿="¿Well... could be worse¿"
-¿This dude is biting me!¿="¿This dude is biting me!¿"
-¿heeeelp!¿="¿heeeelp!¿"
-¿Real mature, zombies! REAL mature!¿="¿Real mature, zombies! REAL mature!¿"
+¿Well... could be worse¿="¿Bueno... podria ser peor¿"
+¿This dude is biting me!¿="¿Este tipo me esta mordiendo!¿"
+¿heeeelp!¿="¿Ayudaaaa!¿"
+¿Real mature, zombies! REAL mature!¿="¿Zombis maduros! Zombis realmente maduros!¿"
 ¿aaaaaaaaa!¿="¿aaaaaaaaa!¿"
-¿I regret everything!¿="¿I regret everything!¿"
+¿I regret everything!¿="¿Me arrepiento de todo!¿"
 ¿woops¿="¿woops¿"
-¿dangummit¿="¿dangummit¿"
-¿oh poop¿="¿oh poop¿"
+¿dangummit¿="¿rachicleyos¿"
+¿oh poop¿="¿oh pupu¿"
 ¿C... CANADA¿="¿C... CANADA¿"
-¿OH, DANG¿="¿OH, DANG¿"
+¿OH, DANG¿="¿OH, RAYOS¿"
 ¿BARF!¿="¿BARF!¿"
-¿DANG IT!¿="¿DANG IT!¿"
+¿DANG IT!¿="¿MALDICION!¿"
 ¿noooooo¿="¿noooooo¿"
-¿uh wait... aaaaa¿="¿uh wait... aaaaa¿"
+¿uh wait... aaaaa¿="¿uh espera... aaaaa¿"
 ¿argh¿="¿argh¿"
-¿I regret nothing!¿="¿I regret nothing!¿"
-¿Tell Tim Horton I...¿="¿Tell Tim Horton I...¿"
-¿This is everyone's fault but me!¿="¿This is everyone's fault but me!¿"
+¿I regret nothing!¿="¿No me arrepiento de nada!¿"
+¿Tell Tim Horton I...¿="¿Dile a Tim Horton que yo...¿"
+¿This is everyone's fault but me!¿="¿Es culpa de todos menos yo!¿"
 ¿aaaaa!¿="¿aaaaa!¿"
-¿Catch you on the flip side¿="¿Catch you on the flip side¿"
+¿Catch you on the flip side¿="¿Te veo en el otro lado¿"
 ¿Argh!¿="¿Argh!¿"
-¿I knew this would happen!¿="¿I knew this would happen!¿"
+¿I knew this would happen!¿="¿Sabia que esto pasaria!¿"
 ¿Ow! Ow!!¿="¿Ow! Ow!!¿"
-¿I hope I don't turn into a skeleton¿="¿I hope I don't turn into a skeleton¿"
-¿If only I threw more chairs...¿="¿If only I threw more chairs...¿"
-¿dagnabbit¿="¿dagnabbit¿"
+¿I hope I don't turn into a skeleton¿="¿Espero no convertirme en un esqueleto¿"
+¿If only I threw more chairs...¿="¿Si tan solo hubiera tirado mas sillas...¿"
+¿dagnabbit¿="¿jodernejo¿"
 ¿Aaaaargh!¿="¿Aaaaargh!¿"
-¿Who needs Canada, anyway?¿="¿Who needs Canada, anyway?¿"
+¿Who needs Canada, anyway?¿="¿Quien necesita a Canada de todas formas?¿"
 ¿Caaaaaaaaaaaaaaaaarl!¿="¿Caaaaaaaaaaaaaaaaarl!¿"
-¿Wait, I think I dropped my gum!¿="¿Wait, I think I dropped my gum!¿"
-¿Wait, that one didn't count!¿="¿Wait, that one didn't count!¿"
-¿This is all YOUR fault!¿="¿This is all YOUR fault!¿"
-¿This is aaaaall part of the plan, heh¿="¿This is aaaaall part of the plan, heh¿"
-¿Cheaters! You zombies cheated!¿="¿Cheaters! You zombies cheated!¿"
-¿saaave meeeeeee¿="¿saaave meeeeeee¿"
+¿Wait, I think I dropped my gum!¿="¿Espera, Creo que he tirado mi arma!¿"
+¿Wait, that one didn't count!¿="¿Espera, ese no conto!¿"
+¿This is all YOUR fault!¿="¿Todo es TU culpa!¿"
+¿This is aaaaall part of the plan, heh¿="¿Tooodo esto es parte del plan, heh¿"
+¿Cheaters! You zombies cheated!¿="¿Tramposos! Ustedes zombis hicieron trampa!¿"
+¿saaave meeeeeee¿="¿Saalveeenmeeee¿"
 ¿halp¿="¿halp¿"
-¿Don't worry, I have a plan!¿="¿Don't worry, I have a plan!¿"
-¿No one touch any of my stuff!¿="¿No one touch any of my stuff!¿"
-¿Bury me with my beloved car keys!¿="¿Bury me with my beloved car keys!¿"
-¿Oh well! Better luck next time.¿="¿Oh well! Better luck next time.¿"
-¿I got a problem, here.¿="¿I got a problem, here.¿"
-¿Ha! That tickles!¿="¿Ha! That tickles!¿"
+¿Don't worry, I have a plan!¿="¿No se preocupen, tengo un plan!¿"
+¿No one touch any of my stuff!¿="¿Nadie tocara ninguna de mis cosas!¿"
+¿Bury me with my beloved car keys!¿="¿Entierrenme con las llaves de mi preciado auto!¿"
+¿Oh well! Better luck next time.¿="¿Oh bueno! Mas suerte la proxima.¿"
+¿I got a problem, here.¿="¿Tengo un problema, aqui.¿"
+¿Ha! That tickles!¿="¿Ha! Eso cosquillea!¿"
 ¿WOOOooooooouch!¿="¿WOOOooooooouch!¿"
-¿Argh! Run for it!¿="¿Argh! Run for it!¿"
-¿Wait! I got something in my eye!¿="¿Wait! I got something in my eye!¿"
-¿Just got the wind knocked outta me.¿="¿Just got the wind knocked outta me.¿"
-¿I can still do this! One second!¿="¿I can still do this! One second!¿"
-¿*rolling eyes at zombies in disgust*¿="¿*rolling eyes at zombies in disgust*¿"
-¿Hey! Bad zombie! Bad!¿="¿Hey! Bad zombie! Bad!¿"
+¿Argh! Run for it!¿="¿Argh! Corre!¿"
+¿Wait! I got something in my eye!¿="¿Espera! Tengo algo en mi ojo!¿"
+¿Just got the wind knocked outta me.¿="¿EL viento me empujo desde atras.¿"
+¿I can still do this! One second!¿="¿Todavia puedo hacerlo! Un segundo!¿"
+¿*rolling eyes at zombies in disgust*¿="¿*Ojos de zombis rodando en disgusto*¿"
+¿Hey! Bad zombie! Bad!¿="¿Hey! Mal zombi! Malo!¿"
 ¿eeeeep¿="¿eeeeep¿"
-¿*g...gulp*¿="¿*g...gulp*¿"
-¿I've had it now!¿="¿I've had it now!¿"
-¿No fair!¿="¿No fair!¿"
-¿Either these zombies go... or I do!¿="¿Either these zombies go... or I do!¿"
+¿*g...gulp*¿="¿*t...tragar*¿"
+¿I've had it now!¿="¿Lo tengo ahora!¿"
+¿No fair!¿="¿No es justo!¿"
+¿Either these zombies go... or I do!¿="¿Estos zombis se tienen que ir... o me ire yo!¿"
 ¿owowowowow¿="¿owowowowow¿"
 ¿OOF!¿="¿OOF!¿"
-¿Ow my spleen¿="¿Ow my spleen¿"
-¿Well I'll be a monkey's uncle. I'm dead!¿="¿Well I'll be a monkey's uncle. I'm dead!¿"
-¿Zombie spit, gross¿="¿Zombie spit, gross¿"
-¿HUMAN THING EVENT: ¿="¿HUMAN THING EVENT: ¿"
-¿SMASHIN!¿="¿SMASHIN!¿"
-¿EITHER¿="¿EITHER¿"
-¿FIGHTIN!¿="¿FIGHTIN!¿"
-¿COMBAT : ¿="¿COMBAT : ¿"
+¿Ow my spleen¿="¿Ow mi bazo¿"
+¿Well I'll be a monkey's uncle. I'm dead!¿="¿Bueno voy a ser tio de un mono. Estoy muerto!¿"
+¿Zombie spit, gross¿="¿Baba de zombi, asqueroso¿"
+¿HUMAN THING EVENT: ¿="¿EVENTO HUMANO: ¿"
+¿SMASHIN!¿="¿MACHACAR!¿"
+¿EITHER¿="¿AMBAS¿"
+¿FIGHTIN!¿="¿LUCHAR!¿"
+¿COMBAT : ¿="¿COMBATE : ¿"
 ¿USA!¿="¿USA!¿"
 [mission-events.df]
 ¿SURE¿="¿SURE¿"
@@ -7278,7 +7268,7 @@
 ¿Don't help them¿="¿Don't help them¿"
 ¿very dangerous...¿="¿very dangerous...¿"
 ¿ will get a reward of 15 food, some ammo, and a cowboy rifle!¿="¿ will get a reward of 15 food, some ammo, and a cowboy rifle!¿"
-¿ is asked for help by a settlement. They say they will be raided by bandits soon. If ¿="¿ is asked for help by a settlement. They say they will be raided by bandits soon. If ¿"
+¿ is asked for help by a settlement. They say they will be raided by bandits soon. If ¿="¿ le ofrecen un acuerrdo por ayudar. Ellos dicen que seran asaltados por bandidos pronto. Si ¿"
 ¿ of wasting their time, and refuse to give the reward.¿="¿ of wasting their time, and refuse to give the reward.¿"
 ¿ tells the settlers how to build fortifications in some weak areas. The extra defenses seem to help a lot in the bandit attack! The settlers are thankful for the help!¿="¿ tells the settlers how to build fortifications in some weak areas. The extra defenses seem to help a lot in the bandit attack! The settlers are thankful for the help!¿"
 ¿ quickly makes plans and gets people to help ¿="¿ quickly makes plans and gets people to help ¿"
